<resources>
    <string name="com.crashlytics.android.build_id">0868f28f-8e0c-4e74-890a-a7e9856ca7c6</string>
    <string name="np_number_picker_increment_button">Increment</string>
    <string name="np_number_picker_decrement_button">Decrement</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="shop_dialog_button_ok">知道了</string>
    <string name="shop_coupon_got">已领</string>
    <string name="shop_coupon_non">"已抢
光"</string>
    <string name="shop_coupon_get">"点击
领取"</string>
    <string name="shop_more_text">查看更多</string>
    <string name="shop_follow_text">关注店铺</string>
    <string name="shop_followed_text">已关注</string>
    <string name="shop_goods_name">商品</string>
    <string name="shop_goods_sell">销量</string>
    <string name="shop_fans">粉丝</string>
    <string name="shop_new_text">新品上架</string>
    <string name="shop_search_hint">搜索店铺内商品</string>
    <string name="btn_go_to_saunter">去逛逛</string>
    <string name="shop_label">商家:</string>
    <string name="shop_total">本店合计:</string>
    <string name="less_stock">仅剩%d件</string>
    <string name="out_stock">已下架</string>
    <string name="sell_out">已售完</string>
    <string name="shopcart_title">购物车</string>
    <string name="open_auth">美丽说登录</string>
    <string name="shopcart_coupon_title">我的平台优惠券(与店铺优惠券叠加更优惠)</string>
    <string name="recommend_coupon_title_prefix">小主,优惠券</string>
    <string name="recommend_coupon_title_suffix">后就过期啦!</string>
    <string name="shopcart_num">(%d)</string>
    <string name="recommend_title">潮流精选</string>
    <string name="app_name">美丽说</string>
    <string name="network_error_hint">网络不给力，麻烦检查一下</string>
    <string name="network_error">网络异常</string>
    <string name="loadnetdata">数据加载中…</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="makesure">确认</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="reply">回复</string>
    <string name="reset">重置</string>
    <string name="newshare_title">新分享</string>
    <string name="please_wait">请稍候…</string>
    <string name="waitfor">加载中…</string>
    <string name="invalid_username_password">用户名或密码错误</string>
    <string name="serverbusy">系统繁忙,请稍候再试</string>
    <string name="registerfail">注册不成功</string>
    <string name="editsuccess">信息修改成功</string>
    <string name="editfail">信息修改失败</string>
    <string name="user_editing">信息修改中…</string>
    <string name="sendmessagesuccess">发送成功</string>
    <string name="unbindsinatitle">确定不再将分享同步到新浪微博吗？</string>
    <string name="unbindsinamessage">(下次启动需要重新配置账户)</string>
    <string name="unbindqqtitle">确定不再将分享同步到QQ空间吗？</string>
    <string name="text_fashion">时尚</string>
    <string name="text_profile_dress">发布的搭配</string>
    <string name="text_add_attention">关注</string>
    <string name="text_have_attention">已关注</string>
    <string name="text_cancel_attention">取消关注</string>
    <string name="next">下一步</string>
    <string name="tips_new_message">点击查看新发现</string>
    <string name="tips_new_message_update">为你更新%1$d条发现</string>
    <string name="delete">删除</string>
    <string name="meilishuo_audrey">美丽说时尚酵母</string>
    <string name="no_followed_shop_text">还没有关注任何店铺哦</string>
    <string name="muyoule">木有了…</string>
    <string name="jiazaizhong">数据加载中…</string>
    <string name="nofans">还没有粉丝哦</string>
    <string name="no_follow_user">还没有关注任何人</string>
    <string name="no_follow_maga">还没有关注过任何杂志</string>
    <string name="no_follow_circle">暂无关注的群</string>
    <string name="no_like">还没有分享过任何宝贝哦</string>
    <string name="no_create_maga">还没有创建过杂志</string>
    <string name="no_like_goods">还没有喜欢过任何宝贝哦</string>
    <string name="no_like_goods_not_login">好看的宝贝不能让TA溜走</string>
    <string name="no_like_goods_second">登录后喜欢会同步保存，永远不会丢失</string>
    <string name="end_time">结束时间</string>
    <string name="msg_send_fail">发送失败</string>
    <string name="myshareorder">我的晒单</string>
    <string name="myshare">我的分享</string>
    <string name="my_maginize">我的杂志</string>
    <string name="albums">相册</string>
    <string name="camera">相机</string>
    <string name="club_act_num">%1$d人参加</string>
    <string name="club_share_title">【美丽说晒宝贝】我 在美丽说分享了一个宝贝，当勤快的种草机~</string>
    <string name="club_success">种草成功</string>
    <string name="no_share_order">暂无晒单</string>
    <string name="text_foot">查看更多评论…</string>
    <string name="text_foot_loading">加载中…</string>
    <string name="text_is_busy">正在请求网络，请稍候…</string>
    <string name="btn_article_comment">评论</string>
    <string name="btn_article_del_fail">删除晒单失败</string>
    <string name="text_unlike_success">删除喜欢成功</string>
    <string name="text_like_fail">喜欢失败</string>
    <string name="text_has_no_data">暂无评论</string>
    <string name="text_can_not_reply">爱美丽Club火热内测中，回复功能暂未全部开放。先去逛逛吧！</string>
    <string name="text_can_not_like">抱歉，你无喜欢的权限。</string>
    <string name="title_confirm_del_article">确认删除晒单?</string>
    <string name="title_confirm_del_reply">确认删除回复?</string>
    <string name="buyer_tips">买家tips:</string>
    <string name="week_daren">本周达人榜</string>
    <string name="week_eng">Week Rank</string>
    <string name="new_msg">新消息</string>
    <string name="all_msg">全部消息</string>
    <string name="tab_home_new">首页</string>
    <string name="tab_classify_new">分类</string>
    <string name="tab_post">群</string>
    <string name="tab_msg_new">消息</string>
    <string name="tab_msg_higo">全球购</string>
    <string name="tab_me_new">我</string>
    <string name="scheme_tab_home">首页</string>
    <string name="scheme_tab_mai">买</string>
    <string name="scheme_tab_message">消息</string>
    <string name="scheme_tab_higo">全球购</string>
    <string name="scheme_tab_me">我</string>
    <string name="scheme_tab_post">群</string>
    <string name="tab_discovery">发现</string>
    <string name="tab_me_login">我</string>
    <string name="main_toast_2g_scan">正在使用2G/3G/4G网络,可能会产生网络流量</string>
    <string name="main_toast_3g_scan">已为您开启省流量模式</string>
    <string name="main_toast_wifi_scan">已为您开启高清浏览模式</string>
    <string name="main_toast_nonet_scan">没有网络连接</string>
    <string name="text_copon_title">我的优惠券</string>
    <string name="btn_coupon_apply">领取优惠券</string>
    <string name="btn_coupon_apply_login">登录领取优惠券</string>
    <string name="text_coupon_tishi">提示</string>
    <string name="text_coupon_chakan">在左上角打开侧边栏“优惠券”中查看</string>
    <string name="text_coupon_onekeyget_check">有效期在左上角打开侧边栏“优惠券”中查看</string>
    <string name="text_coupon_onekeyget_hint_title">张优惠券申领成功</string>
    <string name="capture_title">二维码/条码</string>
    <string name="capture_tips">请对准想要识别的二维码/条码</string>
    <string name="category_search_hint">搜索宝贝或好店</string>
    <string name="treasure_fail">数据加载异常</string>
    <string name="search_item_hint">搜索宝贝</string>
    <string name="search_circle_hint">搜索群</string>
    <string name="search_user_hint">搜索用户</string>
    <string name="search_user_notfound">该用户不存在</string>
    <string name="search_shop_notfound">该店铺不存在</string>
    <string name="search_circle_notfound">该群不存在</string>
    <string name="search_title">搜索</string>
    <string name="search_item">宝贝</string>
    <string name="search_user">用户</string>
    <string name="search_circle">群</string>
    <string name="search_shop">店铺</string>
    <string name="search_clear">清除搜索历史</string>
    <string name="search_selected">筛选</string>
    <string name="no_goods_find">抱歉，没有找到合适的商品！</string>
    <string name="no_search_values">你还没有输入关键词</string>
    <string name="shop_coupon_title">本店优惠</string>
    <string name="have_known">知道了</string>
    <string name="shop_btn_service">联系客服</string>
    <string name="shop_sale_num_label">累计销量</string>
    <string name="shop_product_num_label">宝贝数</string>
    <string name="shop_promote_num_label">本月上新</string>
    <string name="shop_address_label">所在地区</string>
    <string name="shop_service_phone_num_label">客服电话</string>
    <string name="shopkeeper_recommend_label">店主推荐</string>
    <string name="tab_text_decollator">*</string>
    <string name="bind_user_logining">用户登录中请稍候…</string>
    <string name="bind_title">绑定设置</string>
    <string name="sync_unbind_success">解除绑定成功</string>
    <string name="sync_unbind_fail">解除绑定失败</string>
    <string name="sync_server_fail">网络不给力，请检查网络连接</string>
    <string name="sync_binding_now">正在获取绑定状态，请稍候</string>
    <string name="sync_network_error">网络错误，绑定状态获取失败</string>
    <string name="sync_btn_ok">确定</string>
    <string name="sync_btn_cancle">取消</string>
    <string name="sync_unbind_txweibo">确定要取消和腾讯微博的绑定?</string>
    <string name="sync_bind_sina">绑定新浪微博</string>
    <string name="sync_bind_txweibo_1">绑定腾讯微博</string>
    <string name="sync_bind_qzone">绑定QQ空间</string>
    <string name="share_title">选择分享方式</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_weixin_friend">微信好友</string>
    <string name="share_qzone">Qzone</string>
    <string name="share_qq_friend">QQ好友</string>
    <string name="share_down">保存到相册</string>
    <string name="share_weixin_circle">微信朋友圈</string>
    <string name="share_friend_circle">朋友圈</string>
    <string name="share_magazine">收进杂志</string>
    <string name="copy_interlink">复制链接</string>
    <string name="share_cancle">取消</string>
    <string name="share_to_friend_unlock_paster">分享给朋友，解锁贴纸</string>
    <string name="text_share_fail">分享失败</string>
    <string name="text_add_attention_fail">添加关注失败</string>
    <string name="text_item_message">私信</string>
    <string name="text_item_im">客服</string>
    <string name="text_item_atme">\@我</string>
    <string name="text_item_redheart">小红心</string>
    <string name="text_read_message">写私信</string>
    <string name="person_bank_list">我的银行卡</string>
    <string name="profile_purse">钱包</string>
    <string name="profile_over">我的余额</string>
    <string name="profile_financial_details">资金明细</string>
    <string name="profile_autonym">实名认证</string>
    <string name="profile_iou">白付美</string>
    <string name="profile_recharge">充值</string>
    <string name="profile_extract_money">提现</string>
    <string name="profile_statements">历史结算单</string>
    <string name="account_security">账号与安全</string>
    <string name="login_password">登录密码</string>
    <string name="pay_password">支付密码</string>
    <string name="bound_phone">绑定手机</string>
    <string name="lasttime_login">拧发条鸟</string>
    <string name="lasttime_login_tip">最后一次访问时间：</string>
    <string name="account_info">账号及信息完整</string>
    <string name="login_history">登录及访问历史</string>
    <string name="login_device">登录设备</string>
    <string name="account_safe_tip">安全贴士</string>
    <string name="pay_raider">支付攻略</string>
    <string name="circle_create">创建群</string>
    <string name="circle_title">群名称</string>
    <string name="circle_summary">群简介</string>
    <string name="circle_create_hint">最多12个汉字</string>
    <string name="circle_summary_hint">最多70个汉字</string>
    <string name="text_goodsshow_share_title">成功发布晒单</string>
    <string name="text_goodsshow_share_tips">这么好的晒单,也分享给好友吧</string>
    <string name="pay_password_dialog_title">请输入支付密码</string>
    <string name="pay_password_dialog_keyboard_title">美丽说安全键盘</string>
    <string name="pay_password_dialog_keyboard_btn0">0</string>
    <string name="pay_password_dialog_keyboard_btn1">1</string>
    <string name="pay_password_dialog_keyboard_btn2">2</string>
    <string name="pay_password_dialog_keyboard_btn3">3</string>
    <string name="pay_password_dialog_keyboard_btn4">4</string>
    <string name="pay_password_dialog_keyboard_btn5">5</string>
    <string name="pay_password_dialog_keyboard_btn6">6</string>
    <string name="pay_password_dialog_keyboard_btn7">7</string>
    <string name="pay_password_dialog_keyboard_btn8">8</string>
    <string name="pay_password_dialog_keyboard_btn9">9</string>
</resources>