<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/pay_bg" android:paddingLeft="40.0dip" android:paddingTop="20.0dip" android:paddingRight="40.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <com.meilishuo.app.views.CustomTextView android:textSize="@dimen/order_text_standard_size_2" android:textColor="@color/grey_d2" android:layout_gravity="center_horizontal" android:id="@id/password_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pay_password_dialog_title" />
        <com.meilishuo.app.doota.pay.view.MLSPayPasswordView android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/password_passview" android:background="@drawable/password_edittext_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="15.0dip" />
        <com.meilishuo.app.views.CustomTextView android:textSize="@dimen/order_text_standard_size_1" android:textColor="@color/grey_d2" android:gravity="center" android:id="@id/password_cancel_btn" android:background="@drawable/btn_grey_bg" android:paddingLeft="80.0dip" android:paddingTop="10.0dip" android:paddingRight="80.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="2.0dip" android:text="@string/cancel" android:onClick="onClick" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:layoutAnimation="@anim/layout_animation_alpha" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <com.meilishuo.app.views.CustomTextView android:textSize="@dimen/order_text_standard_size_2" android:textColor="@color/grey_d2" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/pay_password_dialog_keyboard_title" android:drawableLeft="@drawable/keyboard_lock_icon" android:drawablePadding="10.0dip" />
        <TableLayout android:background="@color/grey_d4" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableRow android:layout_marginTop="1.0dip">
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn1" android:text="@string/pay_password_dialog_keyboard_btn1" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn2" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn2" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn3" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn3" style="@style/mlspay_keyboard_style" />
            </TableRow>
            <TableRow android:layout_marginTop="1.0dip">
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn4" android:text="@string/pay_password_dialog_keyboard_btn4" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn5" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn5" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn6" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn6" style="@style/mlspay_keyboard_style" />
            </TableRow>
            <TableRow android:layout_marginTop="1.0dip">
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn7" android:text="@string/pay_password_dialog_keyboard_btn7" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn8" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn8" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn9" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn9" style="@style/mlspay_keyboard_style" />
            </TableRow>
            <TableRow android:layout_marginTop="1.0dip">
                <com.meilishuo.app.views.CustomTextView android:textColor="@color/white" android:clickable="false" android:text="@string/pay_password_dialog_keyboard_btn9" style="@style/mlspay_keyboard_style" />
                <com.meilishuo.app.views.CustomTextView android:id="@id/password_keyboard_btn0" android:layout_marginLeft="1.0dip" android:text="@string/pay_password_dialog_keyboard_btn0" style="@style/mlspay_keyboard_style" />
                <ImageView android:id="@id/password_keyboard_btn_eraser" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:src="@drawable/keyboard_eraser_icon" android:scaleType="center" style="@style/mlspay_keyboard_style" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>