<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/grey_l1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/header" style="@style/mainHeader">
        <com.meilishuo.app.views.CustomTextView android:id="@id/back" android:text="@string/cancel" android:layout_centerVertical="true" style="@style/headerTextStyle" />
        <com.meilishuo.app.views.CustomTextView android:text="@string/circle_create" android:layout_centerInParent="true" style="@style/headerTextStyle" />
        <com.meilishuo.app.views.CustomTextView android:textColor="@color/pink_l1" android:id="@id/over" android:text="@string/finish" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/headerTextStyle" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
        <LinearLayout android:orientation="horizontal" android:paddingTop="20.0dip" android:paddingRight="15.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.meilishuo.app.views.CustomTextView android:textSize="18.0sp" android:textColor="@color/grey_d4" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/circle_title" />
            <com.meilishuo.app.views.CustomEditText android:textSize="16.0sp" android:textColor="@color/grey_d3" android:textColorHint="@color/grey" android:layout_gravity="center_vertical" android:id="@id/et_title" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/circle_create_hint" android:singleLine="true" android:maxLength="12" />
        </LinearLayout>
        <View android:layout_height="1.0dip" style="@style/borderline_slide" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="20.0dip" android:paddingRight="15.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.meilishuo.app.views.CustomTextView android:textSize="18.0sp" android:textColor="@color/grey_d4" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/circle_summary" />
            <com.meilishuo.app.views.CustomEditText android:textSize="16.0sp" android:textColor="@color/grey_d3" android:textColorHint="@color/grey" android:id="@id/et_summary" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/circle_summary_hint" android:maxLength="70" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>