<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/mls_layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.meilishuo">
    <RelativeLayout android:id="@id/header" android:onClick="onClick" style="@style/mainHeader">
        <com.meilishuo.app.views.CustomTextView android:id="@id/back_btn" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/TopBackBtn" />
        <com.meilishuo.app.views.CustomTextView android:id="@id/tv_title" android:text="@string/profile_purse" android:layout_centerInParent="true" style="@style/headerTextStyle" />
    </RelativeLayout>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:background="@drawable/order_bg_goodsinformation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-1.0px">
                <LinearLayout android:orientation="vertical" android:id="@id/layout_over" android:background="@drawable/purse_bg_limit" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
                    <com.meilishuo.app.views.CustomTextView android:textSize="14.0sp" android:textColor="@color/grey_d5" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_over" />
                    <com.meilishuo.app.views.CustomTextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="@color/pink_d4" android:id="@id/tv_over" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="￥0.00" />
                </LinearLayout>
                <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_recharge" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" android:layout_marginLeft="22.0dip" android:layout_marginRight="18.0dip" app:optionContentColor="@color/pink_t80" app:optionTitle="@string/profile_recharge" />
                <View android:layout_marginLeft="22.0dip" style="@style/cutline" />
                <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_extract_money" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" android:layout_marginLeft="22.0dip" android:layout_marginRight="18.0dip" app:optionContentColor="@color/pink_t80" app:optionTitle="@string/profile_extract_money" />
                <View android:layout_marginLeft="22.0dip" style="@style/cutline" />
                <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_financial_details" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" android:layout_marginLeft="22.0dip" android:layout_marginRight="18.0dip" app:optionTitle="@string/profile_financial_details" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/order_bg_goodsinformation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_iou" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" android:layout_marginLeft="22.0dip" android:layout_marginRight="18.0dip" android:onClick="onClick" app:optionTitle="@string/profile_iou" />
                <View android:layout_marginLeft="22.0dip" style="@style/cutline" />
                <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_bank" android:paddingLeft="22.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" app:optionTitle="@string/person_bank_list" />
                <View android:layout_marginLeft="22.0dip" style="@style/cutline" />
                <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_autonym" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" android:layout_marginLeft="22.0dip" android:layout_marginRight="18.0dip" android:onClick="onClick" app:optionTitle="@string/profile_autonym" />
            </LinearLayout>
            <com.meilishuo.app.views.OptionsItemView android:id="@id/layout_pay_raider" android:background="@drawable/order_bg_goodsinformation" android:paddingLeft="22.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/option_item_height" android:layout_marginTop="10.0dip" app:optionTitle="@string/pay_raider" />
            <com.meilishuo.app.views.CustomTextView android:textSize="16.0sp" android:textColor="@color/pink_l1" android:layout_gravity="center_horizontal" android:id="@id/tv_statements" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/profile_statements" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>