<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/message_box_dialog_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.meilishuo.app.views.CustomTextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/text_goodsshow_share_title" style="@style/MessageBoxTitleStyle" />
    <com.meilishuo.app.views.CustomTextView android:gravity="center_horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/text_goodsshow_share_tips" style="@style/MessageBoxMessageStyle" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
        <com.meilishuo.app.views.CustomTextView android:textColor="@color/grey_d4" android:gravity="center_horizontal" android:id="@id/weixin_friend" android:background="@drawable/share_ico_bg" android:padding="5.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_weixin_friend" android:drawableTop="@drawable/ico_share_weixin" android:layout_weight="1.0" />
        <com.meilishuo.app.views.CustomTextView android:textColor="@color/grey_d4" android:gravity="center_horizontal" android:id="@id/weixin_friend_circle" android:background="@drawable/share_ico_bg" android:padding="5.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_weixin_circle" android:drawableTop="@drawable/ico_share_circle" android:layout_weight="1.0" />
        <com.meilishuo.app.views.CustomTextView android:textColor="@color/grey_d4" android:gravity="center_horizontal" android:id="@id/sina_weibo" android:background="@drawable/share_ico_bg" android:padding="5.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_weibo" android:drawableTop="@drawable/ico_share_sina" android:layout_weight="1.0" />
    </LinearLayout>
    <com.meilishuo.app.views.CustomTextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/cancel" android:background="@drawable/btn_done_bg" android:paddingLeft="30.0dip" android:paddingTop="10.0dip" android:paddingRight="30.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:maxWidth="200.0dip" android:minWidth="100.0dip" android:text="@string/club_success" style="@style/CancelButtonStyle" />
</LinearLayout>